<resources>
    <string name="app_name">Dev Vibe</string>

    <string name="please_wait_format">Please wait %1$s</string>
    <string name="artist_name_with_duration">%1$s • %2$s</string>
    <string name="artist_name_with_year_2">%1$s • %2$s</string>
    <string name="artist_name_with_year">%1$s(%2$s)</string>
    <string name="title_with_artist_name">%1$s - %2$s</string>
    <string name="copy_right_format">© %1$s</string>
    <string name="position_format">%1$d.</string>
    <string name="track_count_format">%1$d Songs</string>
    <string name="top_release_by_artist_format">Top Release By %1$s</string>
    <string name="msisdn_format">+%1$s</string>
    <string name="current_duration_format">%1$s/%2$s</string>
    <string name="you_are_subscribing_to_vibe_for_BDT">You are subscribing to Vibe for %1$s BDT</string>
    <string name="valid_till">valid till %1$s</string>

    <string name="playlist_deep_link">Playlist Deep Link</string>
    <string name="release_deep_link">Release Deep Link</string>
    <string name="artist_deep_link">Artist Deep Link</string>

    <string name="please_wait">Please wait…</string>
    <string name="loading">Loading…</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_underline"><u>Sign in</u></string>
    <string name="new_user_sign_up">New User Sign Up</string>
    <string name="recover_password">Recover Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_a_vibe_account">Already have a Vibe account?</string>
    <string name="home">Home</string>
    <string name="video">Video</string>
    <string name="radio">Radio</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="free_music">Free Music</string>
    <string name="download">Download</string>
    <string name="remove_download">Remove Download</string>
    <string name="downloads">Downloads</string>
    <string name="favorites">Favorites</string>
    <string name="my_music">My Music</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="recently_played">Recently Played</string>
    <string name="audio">Audio</string>
    <string name="tracks">Tracks</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="artist">Artist</string>
    <string name="network_setting">Network Setting</string>
    <string name="account_info">Account Info</string>
    <string name="info">Info</string>
    <string name="radio_player">Radio Player</string>
    <string name="copy_code">Copy code</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="song">Song</string>
    <string name="album">Album</string>
    <string name="playlist">Playlist</string>
    <string name="subscription">Subscription</string>
    <string name="please_enter_a_valid_mobile_number">Please enter a valid Mobile Number</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 6 characters</string>
    <string name="code_must_be_at_least_4_characters">Code must be at least 4 characters</string>
    <string name="the_mobile_number_or_password_is_incorrect">The mobile number or password is incorrect</string>
    <string name="reset_password">Reset password</string>
    <string name="please_enter_your_mobile_number_we_will_send_sms_confirmation_to_your_number">Please enter your mobile number. We will send sms confirmation to your number</string>
    <string name="default_country_code">+880</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation">Confirmation</string>
    <string name="a_security_code_sent_to_your_mobile_via_sms">A security code sent to your mobile via SMS</string>
    <string name="code_from_sms">Code from SMS</string>
    <string name="enter_new_password_min_4_digits">Enter new password (Min 4 digits)</string>
    <string name="save">Save</string>
    <string name="resend_code">Resend code</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?</string>
    <string name="you_entered_the_wrong_code_try_again">You entered the wrong code, Try again</string>
    <string name="thank_you">Thank you</string>
    <string name="you_have_successfully_signed_up">You have successfully signed up</string>
    <string name="continue_">Continue</string>
    <string name="warning">Warning</string>
    <string name="your_password_has_been_reset_successfully_please_login_to_continue">Your password has been reset successfully! Please login to continue</string>
    <string name="type_and_search_millions_of_songs_and_video_artists_and_more">Type and search millions of songs and video, artists and more</string>
    <string name="top_song">Top Song</string>
    <string name="top_releases">Top Releases</string>
    <string name="top_videos">Top Videos</string>
    <string name="no_favorite_audios">No favorite audios</string>
    <string name="no_favorite_videos">No favorite videos</string>
    <string name="no_favorite_artists">No favorite artists</string>
    <string name="no_playlist">No Playlist</string>
    <string name="type_to_search">Type to search</string>
    <string name="no_favorite_demo_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="playlist_title">Playlist title</string>
    <string name="ok">OK</string>
    <string name="title_is_empty">title is empty</string>
    <string name="playlist_created_successfully">Playlist Created Successfully</string>
    <string name="share_on_social">Share on Social</string>
    <string name="go_to_album">Go to Album</string>
    <string name="go_to_artist">Go to Artist</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="delete_this_playlist">Delete this playlist</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="are_you_sure_you_want_to_delete_this_playlist">Are you sure you want to delete this playlist?</string>
    <string name="see_more">See more</string>
    <string name="added_to_playlist">Added to Playlist</string>
    <string name="remove_from_favorite">Remove from Favorite</string>
    <string name="play_now">Play Now</string>
    <string name="play_next">Play Next</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="data_savings">Data Savings</string>
    <string name="_64_kbps">64 kbps</string>
    <string name="standard_quality">Standard Quality</string>
    <string name="_128_kbps">128 kbps</string>
    <string name="high_definition_hd">High Definition (HD)</string>
    <string name="_320_kbps">320 kbps</string>
    <string name="play_queue">Play Queue</string>
    <string name="done">Done</string>
    <string name="up_next_radios">Up Next Radios</string>
    <string name="this_is_an_auto_renewable_service">This is an auto-renewable service. Banglalink standard data charge applicable for all plans. All plans subscription are including additional VAT, SD and SC. This is applicable for mobile billing.</string>
    <string name="free">Free</string>
    <string name="trial_plan">Trial Plan</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="subscribe">Subscribe</string>
    <string name="mobile_billing">Mobile Billing</string>
    <string name="subscribe_a_plan">Subscribe a plan</string>
    <string name="enjoy_millions_of_songs_amp_videos"><![CDATA[Enjoy millions of songs & videos]]></string>
    <string name="are_you_sure_want_to_unsubscribe">Are you sure want to unsubscribe?</string>
    <string name="free_user">Free user</string>
    <string name="Subscribed_user">Subscribed user</string>
    <string name="play_on_offline">Play on offline</string>
    <string name="don_t_use_traffic_data">Don’t use traffic data</string>
    <string name="stream_only_on_wifi">Stream only on WIFI</string>
    <string name="stream_only_when_connected_to_wifi">Stream only when connected to WIFI</string>
    <string name="download_only_on_wifi">Download only on WIFI</string>
    <string name="download_only_when_connected_to_wifi">Download only when connected to WIFI</string>
    <string name="streaming_settings">Streaming settings</string>
    <string name="choose_quality">Choose quality</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_of_the_application">Sign out of the application</string>
    <string name="reward_points">Reward points</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="terms_of_use_of_vibe">Terms of use of Vibe</string>
    <string name="version">Version</string>
</resources>
