<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGrey"
            android:padding="@dimen/_16sdp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audio_settings"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16sdp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <RelativeLayout
                android:id="@+id/dataSavingLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:visibility="visible">

                <RadioButton
                    android:id="@+id/rbDataSaving"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:buttonTint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/dataSaving"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/data_savings"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dataSaving"
                    android:layout_alignParentStart="true"
                    android:text="@string/_64_kbps"
                    android:textSize="@dimen/_11sdp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/standardQualityLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center"
                android:visibility="visible">

                <RadioButton
                    android:id="@+id/rbStandardQuality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:buttonTint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/standardQuality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/standard_quality"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/standardQuality"
                    android:layout_alignParentStart="true"
                    android:text="@string/_128_kbps"
                    android:textSize="@dimen/_11sdp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/highDefinitionLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center"
                android:visibility="visible">

                <RadioButton
                    android:id="@+id/rbHighDefinition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:buttonTint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/highDefinition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/high_definition_hd"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/highDefinition"
                    android:layout_alignParentStart="true"
                    android:text="@string/_320_kbps"
                    android:textSize="@dimen/_11sdp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</layout>