<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="authenticationViewModel"
            type="com.beat.view.authentication.AuthenticationViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/codeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:text="@string/a_security_code_sent_to_your_mobile_via_sms"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/rectangle_corner_round_one"
                    android:gravity="center"
                    android:hint="@string/code_from_sms"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_12sdp"
                    android:text="@={authenticationViewModel.signUpCode}"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_14sdp" />

                <LinearLayout
                    android:id="@+id/dontReceiveCodeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:gravity="start|center"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/text3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/didn_t_receive_the_code"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/waitText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="normal"
                        android:visibility="gone"
                        tools:text="Please Wait" />

                    <TextView
                        android:id="@+id/resend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/resend_code"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:visibility="visible" />

                </LinearLayout>

                <TextView
                    android:id="@+id/wrongCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/you_entered_the_wrong_code_try_again"
                    android:textColor="@color/pinkRed"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cancel"
                        style="@style/selectableForegroundStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:padding="@dimen/_12sdp"
                        android:text="@string/cancel"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/confirm"
                        style="@style/selectableForegroundStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:padding="@dimen/_12sdp"
                        android:text="@string/confirm"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/thankLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:src="@drawable/ic_checked_thank" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:text="@string/thank_you"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:text="@string/you_have_successfully_signed_up"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/continueTo"
                    style="@style/selectableForegroundStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/continue_"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/uiFreezer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite70"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

</layout>